Fixed spacing problem

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -287,6 +287,7 @@ footer {
     grid-gap: 1rem;
     color: #D1EAF9;
     border: 1px solid black;
+    box-sizing: border-box;
 }
 
 .footer-info {
