--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -29,7 +29,7 @@
     header h1 {
         font-size: 2rem;
         z-index: 1;
-        width: 50rem;
+        width: 60%;
     }
 
     nav {
